fwb: Add screen off fod [1/2]
Also revert "FODCircleView: disable touch detection on screen off"

6a5b55656e62176ae3057e9d6091a07bf97f0b8c.

@jhenrique09 - adapt to PE

Change-Id: I2aba41f6669291ce65880df3fc7f3ed77cd45bed

--- a/core/res/res/values/octavi_symbols.xml
+++ b/core/res/res/values/octavi_symbols.xml
@@ -112,5 +112,8 @@
 
    <!-- NightLight FOD -->
    <java-symbol type="bool" name="disable_fod_night_light"/>
+   
+    <!-- Whether device supports in-display fingerprint when screen is turned off -->
+    <java-symbol type="bool" name="config_supportsScreenOffInDisplayFingerprint" />
 
 </resources>
