--- a/core/res/res/values/octavi_config.xml
+++ b/core/res/res/values/octavi_config.xml
@@ -134,5 +134,8 @@
 
     <!-- NightLight FOD -->
     <bool name="disable_fod_night_light">false</bool>
+    
+    <!-- Whether device supports in-display fingerprint when screen is turned off -->
+    <bool name="config_supportsScreenOffInDisplayFingerprint">false</bool>
 
 </resources>
